# siliconswarm-at-ensue-plugin

./: .CLAUDE.md.swp  .gitignore  CLAUDE.md  Makefile  README.md  benchmark_coreml.py  collab.md  coordination.md  go.mod
ane_kernel/: Cargo.toml  (+1 more)
ane_kernel/crates/ane/: Cargo.toml
ane_kernel/crates/ane/examples/: autoresearch.rs  bench.rs  bench_12L.rs  bench_9layer.rs  bench_batch.rs  bench_batch_layer.rs  bench_const_matmul.rs  bench_custom_quant.rs  bench_dequant_matmul.rs  bench_direct.rs  bench_elem_fixed.rs  bench_elementwise_2560.rs  bench_ffn.rs  bench_ffn_matmul.rs  bench_ffn_split.rs  bench_fp16_scale.rs  bench_inference_scale.rs  bench_int4_dequant.rs  bench_int4_full.rs  bench_nl.rs  bench_prefill.rs  bench_qwen.rs  bench_qwen17b.rs  bench_qwen_fused.rs  bench_qwen_inference.rs  bench_qwen_ip.rs  bench_seq1.rs  bench_split_ip.rs  bench_tiled.rs  bench_weight_bw.rs  best_kernel.rs  crossover.rs  distilbert_bench.rs  distilbert_model.rs  distilbert_verify.rs  draft_model.rs  fair_compare.rs  find_const_limit.rs  find_max_sp.rs  full_layer.rs  (+29 more)
ane_kernel/crates/ane/examples/gpt2_forward/: compiled_model.rs  config.rs  executables.rs  flash_attention.metal  gpu_ffn.rs  kv_cache.rs  main.rs  sampling.rs  session.rs  spinner.rs
ane_kernel/crates/ane/src/: ane_client.rs  ane_in_memory_model.rs  ane_in_memory_model_descriptor.rs  ane_io_surface_object.rs  ane_performance_stats.rs  ane_request.rs  client.rs  coreml.rs  executable.rs  ffi.rs  io_surface.rs  lib.rs  request.rs  tensor_data.rs
ane_kernel/crates/ane/src/graph/: compile.rs  descriptor.rs  ops.rs
(+17 files in other folders)
