[package]
name = "ane"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Rust bindings for the Apple Neural Engine (ANE) via the private AppleNeuralEngine.framework"
repository = "https://github.com/computer-graphics-tools/ane"
readme = "../../CLAUDE.md"
keywords = ["apple", "neural-engine", "ane", "machine-learning"]
categories = ["api-bindings", "hardware-support"]
build = "build.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[[example]]
name = "bench"
path = "examples/bench.rs"

[[example]]
name = "gpt2_ane"
path = "examples/gpt2_ane.rs"

[[example]]
name = "phi_ane"
path = "examples/phi_ane.rs"

[[example]]
name = "smollm_ane"
path = "examples/smollm_ane.rs"

[[example]]
name = "phi_gpu"
path = "examples/phi_gpu.rs"

[dependencies]
thiserror.workspace = true
objc2.workspace = true
objc2-foundation.workspace = true
objc2-io-surface.workspace = true
libc.workspace = true
serde.workspace = true
serde_json.workspace = true
hf-hub.workspace = true
safetensors.workspace = true
tokenizers.workspace = true
half.workspace = true
rand.workspace = true
metal.workspace = true
